fix: ci/cd build error

--- a/.github/workflows/NewVersionRelease.yml
+++ b/.github/workflows/NewVersionRelease.yml
@@ -46,7 +46,7 @@ jobs:
     # 配置、编译程序
     - name: CMake Config
       run: |
-        cmake -B build -DCMAKE_PREFIX_PATH="${{ env.Qt6_DIR }}" -G "Ninja"  -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_PREFIX_PATH="${{ env.Qt6_DIR }}" -G "Unix Makefiles"  -DCMAKE_BUILD_TYPE=Release
     - name: CMake Build
       run: cmake --build build --target generate_exe_installer --config Release
     # 打包输出文件
